--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
                 <i class="fa-solid fa-bars"></i>
             </ul>
         </nav>
+        <div class="banner display-flex">
+            <div class="banner-content">
+                <h1 class="banner-title">Get body in <span class="shape dancing-script-font">shape</span> & stay healthy</h1>
+                <p class="banner-description">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <button class="btn-primary fnt-color">Join Club Now</button>
+                <button class="download fnt-color">Download Now</button>
+            </div>
+            <div class="banner-content">
+                <img class="banner-img" src="images/Images 2.png" alt="">
+                <div class="badge1 display-flex">
+                    <div class="ball"></div>
+                    <div class="badge1-content">
+                        <h3>350+</h3>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+                <div class="badge2">
+                    <h2>500+</h2>
+                    <p>Free Workout Videos</p>
+                </div>
+            </div>
+            
+        </div>
     </header>
     <main></main>
     <footer></footer>
