habit section added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="banner display-flex">
             <div class="banner-content">
                 <h1 class="banner-title">Get body in <span class="shape dancing-script-font">shape</span> & stay healthy</h1>
-                <p class="banner-description">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <p class="banner-description des-color">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                 <button class="btn-primary fnt-color">Join Club Now</button>
                 <button class="download fnt-color">Download Now</button>
             </div>
@@ -41,11 +41,37 @@
                     <h2>500+</h2>
                     <p>Free Workout Videos</p>
                 </div>
-            </div>
-            
+            </div>    
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="habit">
+            <h2 class="habit-title">Change Your Habits</h2>
+            <p class="habit-description des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/image 3.png" alt="" class="card-img">
+                    <h4 class="card-title">Movement</h4>
+                    <p class="card-description des-color">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 2.png" alt="" class="card-img">
+                    <h4 class="card-title">Time</h4>
+                    <p class="card-description des-color">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 4.png" alt="" class="card-img">
+                    <h4 class="card-title">Practice</h4>
+                    <p class="card-description des-color">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 5.png" alt="" class="card-img">
+                    <h4 class="card-title">Weight Loss</h4>
+                    <p class="card-description des-color">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
