bmi calculator done

--- a/index.html
+++ b/index.html
@@ -71,6 +71,64 @@
                 </div>
             </div>
         </section>
+        <section class="extra-mile display-flex">
+            <div class="extra-container">
+                <h2 class="extra-title">Run an Extra <br>Mile Easily</h2>
+                <p class="extra-description des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="btn-primary fnt-color">Join Now</button>
+            </div>
+            <div class="extra-container">
+                <img src="images/run.jpg" alt="" class="extra-img">
+            </div>
+        </section>
+        <section class="bmi">
+            <h3 class="bmi-title">BMI Calculator</h3>
+            <p class="bmi-title-des des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="bmi-container display-flex">
+                <div class="bmi-chart-container">
+                    <h4 class="chart-title">BMI Calculator Chart</h4>
+                    <table class="chart-table">
+                        <tr>
+                            <th>BMI</th>
+                            <th class="nowrap">Weight Status</th>
+                        </tr>
+                        <tr class="des-color">
+                            <td class="nowrap">Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr class="des-color">
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr class="des-color">
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr class="des-color">
+                            <td class="nowrap">30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="bmi-calculator-container">
+                    <h3 class="bmi-calculator-title">Calculate your BMI</h3>
+                    <p class="bmi-calculator-des des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                    <form class="bmi-form">
+                        <input type="text" class="bmi-input fnt-color" id="fname" placeholder="Height/cm">
+                        <input type="text" class="bmi-input fnt-color" id="fname" placeholder="Weight/kg">
+                        <input type="text" class="bmi-input fnt-color" id="fname" placeholder="Age">
+                        <select name="sex" id="" class="bmi-input fnt-color">
+                            <option value="sex">Sex</option>
+                        </select>
+                        <select name="sex" id="" class="bmi-input-activity fnt-color">
+                            <option value="sex">Select an activity factor</option>
+                        </select>
+                        <input type="button" value="Calculate" class="btn-primary fnt-color">
+                    </form>
+                </div>
+            </div>
+            
+        </section>
     </main>
     <footer></footer>
 </body>
