--- a/index.html
+++ b/index.html
@@ -129,6 +129,57 @@
             </div>
             
         </section>
+
+        <section class="team">
+            <h3 class="team-title">Meet Our Team</h3>
+            <p class="team-des des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="members">
+                <div class="team-container fnt-color">
+                    <img src="images/trainer1.png" alt="" class="member-img">
+                    <div class="member-iden">
+                        <h5 class="member-name">Jerome Bell</h5>
+                        <p class="member-title">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-container">
+                    <img src="images/trainer2.png" alt="" class="member-img">
+                    <div class="member-iden">
+                        <h5 class="member-name">Cameron Williamson</h5>
+                        <p class="member-title">Trainer</p>
+                    </div>
+                    
+                    <div class="member-iden"></div>
+                </div>
+                <div class="team-container">
+                    <img src="images/trainer3.png" alt="" class="member-img">
+                    <div class="member-iden">
+                        <h5 class="member-name">Darrel Steward</h5>
+                        <p class="member-title">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-container">
+                    <img src="images/trainer4.png" alt="" class="member-img">
+                    <div class="member-iden">
+                        <h5 class="member-name">Russel</h5>
+                        <p class="member-title">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-container">
+                    <img src="images/trainer5.png" alt="" class="member-img">
+                    <div class="member-iden">
+                        <h5 class="member-name">Cody Fisher </h5>
+                        <p class="member-title">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-container">
+                    <img src="images/trainer6.png" alt="" class="member-img">
+                    <div class="member-iden">
+                        <h5 class="member-name">Theresa Webb</h5>
+                        <p class="member-title">Trainer</p>
+                    </div>    
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
