--- a/index.html
+++ b/index.html
@@ -180,7 +180,54 @@
                 </div>
             </div>
         </section>
+        <h3 class="team-title">Our Achievements</h3>
+        <p class="team-des des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <section class="achievements display-flex">
+            <div class="achievements-card">
+                <img src="icons/groups.svg" alt="" class="achievements-icons">
+                <p class="achievements-des">100000+ Members</p>
+            </div>
+            <div class="achievements-card">
+                <img src="icons/apartment.svg" alt="" class="achievements-icons">
+                <p class="achievements-des">Available in Big Cities</p>
+            </div>
+            <div class="achievements-card">
+                <img src="icons/medals.svg" alt="" class="achievements-icons">
+                <p class="achievements-des">Frequent Giveaway</p>
+            </div>
+            <div class="achievements-card">
+                <img src="icons/child.svg" alt="" class="achievements-icons">
+                <p class="achievements-des">Child Care Service</p>
+            </div>
+            <div class="achievements-card">
+                <img src="icons/self_improvement.svg" alt="" class="achievements-icons">
+                <p class="achievements-des">We help to mindfullness</p>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-brand">
+                <h3 class="brand">Fitness</h3>
+                <p class="des-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="contact">
+                <h3 class="footer-title">Get Started</h3>
+                <p  class="des-color">Service</p>
+                <p  class="des-color">Contact Us</p>
+                <p  class="des-color">Affiliate Program</p>
+                <p  class="des-color">About Us</p>
+            </div>
+            <div class="contact">
+                <h3 class="footer-title">Get Started</h3>
+                <p  class="des-color">Fitness</p>
+                <p  class="des-color">Platform</p>
+                <p  class="des-color">Workout Library</p>
+                <p  class="des-color">App Design</p>
+            </div>
+        </div>
+        <hr class="des-color">
+        <p class="copy-right des-color">All right reserved @Khalid 2024</p>
+    </footer>
 </body>
 </html>
